ffi/derive/tests/ui_fail/derive_skip_struct.stderr
error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__b_mut` in this scope
  --> tests/ui_fail/derive_skip_struct.rs:28:9
   |
9  | #[ffi_export]
   | ------------- similarly named function `FfiStruct__a_mut` defined here
...
28 |         FfiStruct__b_mut(IntoFfi::into_ffi(&s), b.as_mut_ptr());
   |         ^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `FfiStruct__a_mut`

error[E0425]: cannot find function, tuple struct or tuple variant `FfiStruct__set_b` in this scope
  --> tests/ui_fail/derive_skip_struct.rs:30:9
   |
9  | #[ffi_export]
   | ------------- similarly named function `FfiStruct__set_a` defined here
...
30 |         FfiStruct__set_b(IntoFfi::into_ffi(&mut s), IntoFfi::into_ffi(*b));
   |         ^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `FfiStruct__set_a`
